trunk/Archive2/a0/968f4c172c04e1/output
main.cpp:5:1: error: 'warp_base_class_helper' does not name a type
 warp_base_class_helper
 ^
